# MeshSkinning-and-Animation

./: README.md
exts/nanovg/src/: stb_image.h
projects/example/: CMakeLists.txt
projects/example/code/: DDSFile.cpp  DDSFile.h  LightObject.h  animation.cpp  animation.h  exampleapp.cc  exampleapp.h  main.cc  model.cpp  model.h  naxParser.cpp  naxParser.h  naxfileformat.h  nvx2parser.cpp  nvx2parser.h  tdMathLibNew.h  textureResource.cpp  textureResource.h  vertexComponent.h
